Fixed sidebar overflow:hidden and no scrollbar on column

--- a/client/src/styles/App.scss
+++ b/client/src/styles/App.scss
@@ -723,7 +723,7 @@ html, body {
 .sidebar {
   display        : flex;
   flex-direction : column;
-  height         : 100%;
+  height         : 100vh;
   position       : relative;
   overflow       : hidden;
 
@@ -735,7 +735,7 @@ html, body {
     justify-content : flex-start;
     align-items     : center;
     width           : 300px;
-    height          : 100%;
+    height          : calc(100% - 20px);
     border-top      : 10px solid $mainRasp;
     border-bottom   : 10px solid $mainRasp;
 
